--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@auth0/angular-jwt": "^5.0.2",
     "angular2-chartjs": "^0.5.1",
     "chart.js": "^2.9.4",
+    "jwt-decode": "^3.1.2",
     "ng2-charts": "^2.4.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
