--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "build-prod": "ng build --configration production"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
