--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@auth0/angular-jwt": "^5.0.2",
     "angular2-chartjs": "^0.5.1",
     "chart.js": "^2.9.4",
+    "express": "^4.17.1",
     "jwt-decode": "^3.1.2",
     "ng2-charts": "^2.4.3",
     "rxjs": "~6.6.0",
